--- a/DirectXTutorial/DirectXTutorial.vcxproj.filters
+++ b/DirectXTutorial/DirectXTutorial.vcxproj.filters
@@ -13,4 +13,7 @@
   <ItemGroup>
     <ClInclude Include="Device.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Tutorial.hlsli" />
+  </ItemGroup>
 </Project>
