--- a/DirectXTutorial/DirectXTutorial.vcxproj.filters
+++ b/DirectXTutorial/DirectXTutorial.vcxproj.filters
@@ -9,9 +9,11 @@
   <ItemGroup>
     <ClCompile Include="Device.cpp" />
     <ClCompile Include="DirectXTutorial.cpp" />
+    <ClCompile Include="Shader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Device.h" />
+    <ClInclude Include="Shader.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Tutorial.hlsli" />
