Edit to load shader

--- a/DirectXTutorial/DirectXTutorial.vcxproj.filters
+++ b/DirectXTutorial/DirectXTutorial.vcxproj.filters
@@ -16,8 +16,13 @@
     <ClInclude Include="Device.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Model.h" />
+    <ClInclude Include="ReadData.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Tutorial.hlsli" />
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="TutorialVS.hlsl" />
+    <FxCompile Include="TutorialPS.hlsl" />
   </ItemGroup>
 </Project>
