--- a/DirectXTutorial/DirectXTutorial.vcxproj.filters
+++ b/DirectXTutorial/DirectXTutorial.vcxproj.filters
@@ -11,12 +11,14 @@
     <ClCompile Include="DirectXTutorial.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Model.cpp" />
+    <ClCompile Include="Camera.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Device.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="ReadData.h" />
+    <ClInclude Include="Camera.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Tutorial.hlsli" />
